--- a/src/scss/core/partials/objects/_media.scss
+++ b/src/scss/core/partials/objects/_media.scss
@@ -56,10 +56,12 @@
 
   &__img {
     margin-right: spacer(1);
+    margin-top: 0.7%; // Aligns image better with text.
   }
 
   &__img--rev {
     margin-left: spacer(1);
+    margin-top: 0.7%; // Aligns image better with text.
   }
 
   &__body {
